# pyfalcon

./: .gitignore  CNAME  Cargo.toml  README.md  index.html  pyfalcon-wasm-4c756db1d8a1eb95.js  pyfalcon-wasm-4c756db1d8a1eb95_bg.wasm  pyfalcon-wasm-7f47f7812ad647a6.js  pyfalcon-wasm-7f47f7812ad647a6_bg.wasm  pyfalcon-wasm-95f244431f0d53e4.js  pyfalcon-wasm-95f244431f0d53e4_bg.wasm
.github/workflows/: pages.yml
cli/: Cargo.toml  read_log.txt
cli/src/: main.rs
core/: Cargo.toml
core/src/: lib.rs
core/src/v310/: disassemble.rs
core/src/v311/: disassemble.rs
core/src/v312/: disassemble.rs
core/src/v313/: disassemble.rs
src/: disassemble.rs  main.rs
src/v310/: disassemble.rs
wasm/: Cargo.toml  index.html
wasm/src/: main.rs
