[package]
name = "pyfalcon-core"
license = "GPL-3.0-or-later"
description = "The core library for disassembling Python, used by pyfalcon"
repository = "https://github.com/Svenskithesource/pyfalcon"
version = "0.1.0"
edition = "2024"

[dependencies]
pyc_editor = "0.2.0"
python_marshal = "0.4.2"
yansi = "1.0.1"