[package]
name = "pyfalcon-core"
license = "GPL-3.0-or-later"
description = "The core library for disassembling Python, used by pyfalcon"
repository = "https://github.com/Svenskithesource/pyfalcon"
version = "0.1.3"
edition = "2024"

[dependencies]
pyc_editor = { workspace = true }
python_marshal = { workspace = true }
yansi = { workspace = true }
