[package]
name = "pyfalcon-wasm"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
egui = "0.32"
eframe = { version = "0.32", default-features = false, features = [
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
    "wayland",       # To support Linux (and CI)
    "x11",           # To support older Linux distributions (restores one of the default features)
] }
env_logger = "0.11.8"
rfd = "0.15.4"
log = "0.4.27"
core = { path = "../core", package = "pyfalcon-core" }
pyc_editor = "0.2.12"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4.50"
web-sys = "0.3.70"              # to access the DOM (to hide the loading text)
